# LegalNLP

./: .env.example  .gitignore  FULL_PROJECT_README.md  README.md  pyproject.toml
configs/: base.yaml
outputs/reports/: README.md
scripts/: evaluate_robustness.py  export_paper_drafting_package.py  export_submission_package.py  inspect_dataset.py  run_section_importance.py  run_section_transfer.py  train_baseline.py
src/legal_robustness/: __init__.py
src/legal_robustness/analysis/: __init__.py
src/legal_robustness/config/: __init__.py  loader.py  schema.py
src/legal_robustness/data/: __init__.py  diagnostics.py  discovery.py  inspection.py  label_inventory.py  normalize.py  normalized_types.py  raw_types.py  reconstruct.py  rr_mapping.py  types.py
src/legal_robustness/evaluation/: __init__.py
src/legal_robustness/models/: __init__.py
src/legal_robustness/perturb/: __init__.py  types.py
src/legal_robustness/perturbations/: __init__.py  apply.py  diagnostics.py  primitives.py  types.py
src/legal_robustness/prediction/: __init__.py  datasets.py  diagnostics.py  evaluate.py  features.py  input_variants.py  models.py  train_baseline.py  types.py
src/legal_robustness/robustness/: __init__.py  claim_traceability.py  compare.py  consistency_checks.py  datasets.py  diagnostics.py  evaluate_perturbed.py  metrics.py  (+12 more)
tests/: test_config_loader.py  test_data_discovery.py  test_dataset_inspection.py  test_normalization.py  test_paths.py  test_prediction_pipeline.py  test_raw_loaders.py  test_robustness.py  test_rr_reconstruction.py  test_section_transfer.py
(+25 files in other folders)
